# Invoice-Liquidity-Network

./: CONTRIBUTING.md  README.md  fix.md  package.json  pnpm-workspace.yaml
invoice-liquidity-network/contracts/invoice_liquidity/: Cargo.toml  Makefile
invoice-liquidity-network/contracts/invoice_liquidity/src/: errors.rs  invoice.rs  lib.rs  test.rs  tests_regression.rs  tests_state_machine.rs  tests_storage.rs
invoice-liquidity-network/contracts/invoice_liquidity/test_snapshots/test/: test_claim_default_non_funder_fails.1.json  test_claim_default_on_paid_invoice_fails.1.json  test_claim_default_success.1.json  test_full_lifecycle_lp_earns_correct_yield.1.json  test_fund_already_funded_invoice_fails.1.json  test_fund_invoice_sets_funded_at_timestamp.1.json  test_fund_invoice_transfers_correct_amounts.1.json  test_fund_invoice_updates_status_to_funded.1.json  test_fund_nonexistent_invoice_fails.1.json  test_mark_paid_releases_full_amount_to_lp.1.json  test_mark_paid_updates_status.1.json  test_payer_with_default.1.json  test_submit_invoice_returns_id.1.json  test_submit_invoice_stores_correct_fields.1.json  test_submit_invoices_batch_happy_path.1.json  test_submit_multiple_invoices_increment_ids.1.json  test_transfer_funded_invoice_fails.1.json  test_transfer_invoice_updates_freelancer.1.json
invoice-liquidity-network/contracts/invoice_liquidity/test_snapshots/tests_distribution/: distribution_hooks_track_lp_freelancer_and_payer.1.json
invoice-liquidity-network/contracts/invoice_liquidity/test_snapshots/tests_regression/: regression_batch_invoice_ids_unique.1.json  (+5 more)
(+78 files in other folders)
